--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: Tezos ETL
 nav:
   - Overview: index.md
+  - Quickstart: quickstart.md
   - References:
     - Commands: commands.md
     - Schema: schema.md
